# game_server_backend

./: README.md
server/: CMakeLists.txt  Dockerfile  conanfile.txt
server/src/: command_line_parser.h  main.cpp
server/src/application/: application.cpp  application.h  players.cpp  players.h
server/src/database/: connection_pool.h  database.cpp  database.h  domain.h  postgres.cpp  postgres.h  unit_of_work.h  use_cases.h
server/src/database/utils/: tagged_uuid.cpp  tagged_uuid.h
server/src/game/: collision_detector.cpp  collision_detector.h  game.cpp  game.h  game_items.cpp  game_items.h  motion.cpp  motion.h
server/src/infrastructure/: listener.cpp  listener.h
server/src/json_handler/: json_loader.cpp  json_loader.h
server/src/logging/: logger.cpp  logger.h
server/src/request_handler/: api_handler.cpp  api_handler.h  request_handler.cpp  request_handler.h  request_utils.cpp  request_utils.h
server/src/serialization/: serialization.cpp  serialization.h
server/src/server/: http_server.cpp  http_server.h
server/src/utils/: tagged.h
server/tests/: collision_detector_tests.cpp  loot_generator_tests.cpp  state_serialization_tests.cpp
